# trimmedmean

./: .gitignore  .pre-commit-config.yaml  Checking our implementation of MoM-based regression with the one provided by Lecué and Lerasle.ipynb  Comparison with Lecué and Lerasle Implementation.ipynb  Figures.ipynb  README.md  Results.ipynb  _experiments.py  experiment_gd_plugin.py  experiment_theta_zero.py  experiment_vary_contamination.py  experiment_vary_sample_size.py  experiments.ipynb  plot_theta_zero.py  plot_vary_contamination.py  plot_vary_sample_size.py  pyproject.toml  requirements.txt  robust_utils.py  run_experiments.py  simple_example.py
src/: configs.py  cross_validation.py  data.py  distributions.py  experiment.py  fit.py  plot.py
