[tool.poetry]
name = "trimmedmean"
version = "0.1.0"
description = "Companion to article"
authors = ["Lucas Resende <lucas.resende@impa.br>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
numpy = "1.23.3"
pandas = "1.5.0"
matplotlib = "3.6.0"
seaborn = "0.12.0"
pathlib = "1.0.1"
tqdm = "^4.64.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
isort = "^5.11.3"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 20
exclude = ".git"
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401, E741"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
